Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -182,21 +182,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-5a4e0d0964ab>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-7-377e30dd8569>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-5a4e0d0964ab>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return sum([term_output(term, x_value)] for term in terms])\u001b[0m\n\u001b[0m                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-377e30dd8569>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return sum([term_output(term, x_value)] for term in list_of_terms])\u001b[0m\n\u001b[0m                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    return sum([term_output(term, x_value)] for term in terms])"
+    "    return sum([term_output(term, x_value)] for term in list_of_terms])"
    ]
   },
   {
