--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
    "source": [
     "three_x_squared_minus_eleven = [(3, 2), (-11, 0)]\n",
     "line1 = output_at(three_x_squared_minus_eleven, 2) # 1 \n",
-    "print(\"line1)\n",
+    "print(\"line1 =\")\n",
     "print(line1)\n",
     "line2 = output_at(three_x_squared_minus_eleven, 3) # 16"
    ]
