Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,11 @@
     "line1 = output_at(three_x_squared_minus_eleven, 2) # 1 \n",
     "print(\"line1 =\")\n",
     "print(line1)\n",
-    "line2 = output_at(three_x_squared_minus_eleven, 3) # 16"
+    "print()\n",
+    "line2 = output_at(three_x_squared_minus_eleven, 3) # 16\n",
+    "print(\"line1 =\")\n",
+    "print(line1)\n",
+    "print()"
    ]
   },
   {
