Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -192,18 +192,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "16"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "line1 =\n",
+      "1\n",
+      "\n",
+      "line2 =\n",
+      "16\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -213,8 +215,8 @@
     "print(line1)\n",
     "print()\n",
     "line2 = output_at(three_x_squared_minus_eleven, 3) # 16\n",
-    "print(\"line1 =\")\n",
-    "print(line1)\n",
+    "print(\"line2 =\")\n",
+    "print(line2)\n",
     "print()"
    ]
   },
