Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2266,7 +2266,8 @@
    "outputs": [],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    \n",
+    "    myDelta = None\n",
+    "    if delt\n",
     "    output_at(list_of_terms, x_value)"
    ]
   },
