--- a/index.ipynb
+++ b/index.ipynb
@@ -2267,7 +2267,7 @@
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
     "    myDelta = None\n",
-    "    if delt\n",
+    "    if not delta_x == 0\n",
     "    output_at(list_of_terms, x_value)"
    ]
   },
