Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2268,7 +2268,7 @@
     "def delta_f(list_of_terms, x_value, delta_x):\n",
     "    myDelta = None\n",
     "    if not delta_x == 0\n",
-    "        \n",
+    "        myDelta = \n",
     "    output_at(list_of_terms, x_value)"
    ]
   },
