Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2268,7 +2268,7 @@
     "def delta_f(list_of_terms, x_value, delta_x):\n",
     "    myDelta = None\n",
     "    if not delta_x == 0\n",
-    "        f_right = \n",
+    "        f_perturbed = output_at(list_of_terms, x_value + delta_x)\n",
     "        myDelta = output_at(list_of_terms, x_value + delta_x)\n",
     "    "
    ]
