--- a/index.ipynb
+++ b/index.ipynb
@@ -2269,7 +2269,7 @@
     "    myDelta = None\n",
     "    if not delta_x == 0\n",
     "        f_perturbed = output_at(list_of_terms, x_value + delta_x)\n",
-    "        f_perturbed = output_at(list_of_terms, x_value + delta_x)\n",
+    "        f_nominal = output_at(list_of_terms, x_value)\n",
     "        myDelta = output_at(list_of_terms, x_value + delta_x)\n",
     "    "
    ]
