--- a/index.ipynb
+++ b/index.ipynb
@@ -2270,7 +2270,8 @@
     "    if not delta_x == 0\n",
     "        f_perturbed = output_at(list_of_terms, x_value + delta_x)\n",
     "        f_nominal = output_at(list_of_terms, x_value)\n",
-    "        myDelta = (f_perturbed - )\n",
+    "        myDelta = (f_perturbed - f_nominal)/delta_x\n",
+    "        \n",
     "    "
    ]
   },
