Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2271,7 +2271,7 @@
     "        f_perturbed = output_at(list_of_terms, x_value + delta_x)\n",
     "        f_nominal = output_at(list_of_terms, x_value)\n",
     "        myDelta = (f_perturbed - f_nominal)/delta_x\n",
-    "        \n",
+    "    return myDelta\n",
     "    "
    ]
   },
