Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2270,8 +2270,8 @@
     "    if not delta_x == 0\n",
     "        f_perturbed = output_at(list_of_terms, x_value + delta_x)\n",
     "        f_nominal = output_at(list_of_terms, x_value)\n",
-    "        myDelta = (f_perturbed - f_nominal)/delta_x\n",
-    "    return myDelta\n",
+    "        my_delta_f = (f_perturbed - f_nominal)/delta_x\n",
+    "    return my_delta_f\n",
     "    "
    ]
   },
