Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2266,7 +2266,7 @@
    "outputs": [],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    my_delta_f = None\n",
+    "    my_delta_f = 0\n",
     "    if not delta_x == 0\n",
     "        f_perturbed = output_at(list_of_terms, x_value + delta_x)\n",
     "        f_nominal = output_at(list_of_terms, x_value)\n",
