Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2278,22 +2278,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
     }
    ],
    "source": [
-    "line1 = delta_f(four_x_plus_fifteen, 2, 1) # 4"
+    "line1 = delta_f(four_x_plus_fifteen, 2, 1) # 4\n",
+    "print(line1)"
    ]
   },
   {
