--- a/index.ipynb
+++ b/index.ipynb
@@ -3290,7 +3290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def derivative_list(list_of_terms, x_value, delta_x):\n",
+    "def derivative_as_list(list_of_terms, x_value, delta_x):\n",
     "    pass\n",
     "\n",
     "\n",
