Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3291,7 +3291,7 @@
    "outputs": [],
    "source": [
     "def derivative_as_list(list_of_terms):\n",
-    "    pass\n",
+    "    def\n",
     "\n",
     "\n",
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
