--- a/index.ipynb
+++ b/index.ipynb
@@ -3292,7 +3292,7 @@
    "source": [
     "def derivative_as_list(list_of_terms):\n",
     "    def derivative_of_term(term)\n",
-    "        \n",
+    "        c = term\n",
     "\n",
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    pass"
