--- a/index.ipynb
+++ b/index.ipynb
@@ -3294,6 +3294,7 @@
     "    def derivative_of_term(term)\n",
     "        c = term[0]\n",
     "        p = term[1]\n",
+    "        return \n",
     "\n",
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    pass"
