Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3292,7 +3292,7 @@
    "source": [
     "def derivative_as_list(list_of_terms):\n",
     "    def derivative_of_term(term)\n",
-    "        d_term = \n",
+    "        d_term = []\n",
     "        c = term[0]\n",
     "        p = term[1]\n",
     "        return \n",
