Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3293,9 +3293,8 @@
     "def derivative_as_list(list_of_terms):\n",
     "    def derivative_of_term(term)\n",
     "        d_term = None\n",
-    "        \n",
     "        p = term[1]\n",
-    "        \n",
+    "        c = term[0]\n",
     "        return \n",
     "\n",
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
