Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3294,8 +3294,10 @@
     "    def derivative_of_term(term)\n",
     "        d_term = None\n",
     "        p = term[1]\n",
+    "        if p\n",
     "        c = term[0]\n",
-    "        return \n",
+    "        \n",
+    "        return d_term\n",
     "\n",
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    pass"
