--- a/index.ipynb
+++ b/index.ipynb
@@ -3292,10 +3292,9 @@
    "source": [
     "def derivative_as_list(list_of_terms):\n",
     "    def derivative_of_term(term)\n",
-    "        \n",
     "        p = term[1]\n",
     "        if p == 0:\n",
-    "            \n",
+    "            d_term = None\n",
     "        c = term[0]\n",
     "        \n",
     "        return d_term\n",
