--- a/index.ipynb
+++ b/index.ipynb
@@ -3294,7 +3294,7 @@
     "    def derivative_of_term(term)\n",
     "        p = term[1]\n",
     "        if p == 0:\n",
-    "            d_term = None\n",
+    "            d_term = []\n",
     "        c = term[0]\n",
     "        \n",
     "        return d_term\n",
