--- a/index.ipynb
+++ b/index.ipynb
@@ -3295,7 +3295,8 @@
     "        p = term[1]\n",
     "        if p == 0:\n",
     "            d_term = []\n",
-    "        c = term[0]\n",
+    "        else:\n",
+    "            c = term[0]\n",
     "        \n",
     "        return d_term\n",
     "\n",
