Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3295,7 +3295,7 @@
     "        p = term[1]\n",
     "        if p == 0:\n",
     "            d_term = []\n",
-    "        else:\n",
+    "        elif:\n",
     "            c = term[0]\n",
     "        \n",
     "        return d_term\n",
