Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3294,7 +3294,7 @@
     "    def derivative_of_term(term)\n",
     "        p = term[1]\n",
     "        if p == 0:\n",
-    "            d_term = []\n",
+    "            d_term = (0,0)\n",
     "        elif p == 1:\n",
     "            \n",
     "            c = term[0]\n",
