Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3296,7 +3296,7 @@
     "        if p == 0:\n",
     "            d_term = (0,0)\n",
     "        elif p == 1:\n",
-    "            \n",
+    "            d_term = (0,0)\n",
     "            c = term[0]\n",
     "        \n",
     "        return d_term\n",
