--- a/index.ipynb
+++ b/index.ipynb
@@ -3297,6 +3297,7 @@
     "            d_term = (0,0)\n",
     "        elif p == 1:\n",
     "            d_term = (term[0],0)\n",
+    "        else:\n",
     "            c = term[0]\n",
     "        \n",
     "        return d_term\n",
