--- a/index.ipynb
+++ b/index.ipynb
@@ -3298,7 +3298,7 @@
     "        elif p == 1:\n",
     "            d_term = (term[0],0)\n",
     "        else:\n",
-    "            c = term[0]\n",
+    "            d_term = (p*term[0],0)\n",
     "        \n",
     "        return d_term\n",
     "\n",
