Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3298,8 +3298,7 @@
     "        elif p == 1:\n",
     "            d_term = (term[0],0)\n",
     "        else:\n",
-    "            d_term = (p*term[0],0)\n",
-    "        \n",
+    "            d_term = (p*term[0],p-1)\n",
     "        return d_term\n",
     "\n",
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
