--- a/index.ipynb
+++ b/index.ipynb
@@ -3300,7 +3300,7 @@
     "        else:\n",
     "            d_term = (p*term[0],p-1)\n",
     "        return d_term\n",
-    "    \n",
+    "    return []\n",
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    pass"
    ]
