Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3300,7 +3300,8 @@
     "        else:\n",
     "            d_term = (p*term[0],p-1)\n",
     "        return d_term\n",
-    "    return [derivative_of_term(term) for term in list_of_]\n",
+    "    return [derivative_of_term(term) for term in list_of_terms]\n",
+    "\n",
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    pass"
    ]
