--- a/index.ipynb
+++ b/index.ipynb
@@ -3303,7 +3303,7 @@
     "    return [derivative_of_term(term) for term in list_of_terms]\n",
     "\n",
     "def derivative_of_MLC(list_of_terms, x_value, delta_x):\n",
-    "    output_at(list_of_terms, x_value)\n",
+    "    return output_at(derivative_as_list(list_of_terms), x_value)\n",
     "    \n",
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    pass"
