--- a/index.ipynb
+++ b/index.ipynb
@@ -3302,7 +3302,7 @@
     "        return d_term\n",
     "    return [derivative_of_term(term) for term in list_of_terms]\n",
     "\n",
-    "def derivative_of_MLC(list_of_terms, x_value):\n",
+    "def derivative_pure(list_of_terms, x_value):\n",
     "    return output_at(derivative_as_list(list_of_terms), x_value)\n",
     "    \n",
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
