--- a/index.ipynb
+++ b/index.ipynb
@@ -3306,7 +3306,7 @@
     "    return output_at(derivative_as_list(list_of_terms), x_value)\n",
     "    \n",
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    pass"
+    "    return "
    ]
   },
   {
