Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3306,6 +3306,9 @@
     "    return output_at(derivative_as_list(list_of_terms), x_value)\n",
     "    \n",
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
+    "    if delta_x == 0:\n",
+    "        \n",
+    "    delta_f(list_of_terms, x_value, delta_x)\n",
     "    return "
    ]
   },
