Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3307,7 +3307,7 @@
     "    \n",
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
     "    if delta_x == 0:\n",
-    "        \n",
+    "        the_ratio = N\n",
     "    delta_f(list_of_terms, x_value, delta_x)\n",
     "    return "
    ]
