Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3286,9 +3286,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-25-79d76916c562>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-79d76916c562>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def derivative_of_term(term)\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def derivative_as_list(list_of_terms):\n",
     "    def derivative_of_term(term)\n",
@@ -3309,8 +3318,8 @@
     "    if delta_x == 0:\n",
     "        the_ratio = None\n",
     "    else:\n",
-    "        the_ratio = delta_f(list_of_terms, x_value, delta_x)\n",
-    "    return "
+    "        the_ratio = delta_f(list_of_terms, x_value, delta_x)/delta_x\n",
+    "    return the_ratio"
    ]
   },
   {
