Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3286,21 +3286,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-25-79d76916c562>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-79d76916c562>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def derivative_of_term(term)\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def derivative_as_list(list_of_terms):\n",
-    "    def derivative_of_term(term)\n",
+    "    def derivative_of_term(term):\n",
     "        p = term[1]\n",
     "        if p == 0:\n",
     "            d_term = (0,0)\n",
@@ -3309,6 +3300,7 @@
     "        else:\n",
     "            d_term = (p*term[0],p-1)\n",
     "        return d_term\n",
+    "    \n",
     "    return [derivative_of_term(term) for term in list_of_terms]\n",
     "\n",
     "def derivative_pure(list_of_terms, x_value):\n",
@@ -3324,9 +3316,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "derivative_of(four_x_plus_fifteen, 3, 2) # 4.0"
    ]
