--- a/index.ipynb
+++ b/index.ipynb
@@ -3331,7 +3331,7 @@
     }
    ],
    "source": [
-    "derivative_of(four_x_plus_fifteen, 3, 2) # 4.0"
+    "line1 = derivative_of(four_x_plus_fifteen, 3, 2) # 4.0\n"
    ]
   },
   {
