--- a/index.ipynb
+++ b/index.ipynb
@@ -3334,7 +3334,12 @@
     "line1 = derivative_of(four_x_plus_fifteen, 3, 2) # 4.0\n",
     "print(\"line1 =\")\n",
     "print(line1)\n",
-    "print()\n"
+    "print()\n",
+    "\n",
+    "line1 = derivative_of(four_x_plus_fifteen, 3, 2) # 4.0\n",
+    "print(\"line1 =\")\n",
+    "print(line1)\n",
+    "print()"
    ]
   },
   {
