Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3316,22 +3316,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4.0"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "line1 =\n",
+      "4\n",
+      "\n",
+      "line2 =\n",
+      "4.0\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "line1 = derivative_pure(four_x_plus_fifteen, 3, 2) # 4.0\n",
+    "line1 = derivative_pure(four_x_plus_fifteen, 3) # 4.0\n",
     "print(\"line1 =\")\n",
     "print(line1)\n",
     "print()\n",
