--- a/index.ipynb
+++ b/index.ipynb
@@ -3296,7 +3296,7 @@
     "        if p == 0:\n",
     "            d_term = (0,0)\n",
     "        elif p == 1:\n",
-    "            d_term = (term[0],0)\n",
+    "            d_term = (float(term[0]),0)\n",
     "        else:\n",
     "            d_term = (p*term[0],p-1)\n",
     "        return d_term\n",
