Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3286,7 +3286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3298,7 +3298,7 @@
     "        elif p == 1:\n",
     "            d_term = (float(term[0]),0)\n",
     "        else:\n",
-    "            d_term = (p*term[0],p-1)\n",
+    "            d_term = (float(p*term[0]),p-1)\n",
     "        return d_term\n",
     "    \n",
     "    return [derivative_of_term(term) for term in list_of_terms]\n",
@@ -3316,7 +3316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3324,7 +3324,7 @@
      "output_type": "stream",
      "text": [
       "line1 =\n",
-      "4\n",
+      "4.0\n",
       "\n",
       "line2 =\n",
       "4.0\n",
